--- a/brian.html
+++ b/brian.html
@@ -11,13 +11,17 @@
 <body>
     <header>
         <nav class="nav">
-            <ul>
-                <a class="nav-item home" href="index.html"><li>Home</li></a>
-                <a class="nav-item ben" href="ben.html"><li>Ben</li></a>
-                <a class="nav-item brian" href="brian.html"><li>Brian</li></a>
-                <a class="nav-item kaylee" href="kaylee.html"><li>Kaylee</li></a>
-                <a class="nav-item manouk" href="manouk.html"><li>Manouk</li></a>
-                <a class="nav-item rosa" href="rosa.html"><li>Rosa</li></a>
+                        <button type="button" id="hamburger">
+                            <span class="menuIcon">test1</span>
+                            <span class="closeIcon">close test 2</span>
+                        </button>
+            <ul class="menu">
+                <a class="nav-item menuItem home" href="index.html"><li>Home</li></a>
+                <a class="nav-item menuItem ben" href="ben.html"><li>Ben</li></a>
+                <a class="nav-item menuItem brian" href="brian.html"><li>Brian</li></a>
+                <a class="nav-item menuItem kaylee" href="kaylee.html"><li>Kaylee</li></a>
+                <a class="nav-item menuItem manouk" href="manouk.html"><li>Manouk</li></a>
+                <a class="nav-item menuItem rosa" href="rosa.html"><li>Rosa</li></a>
             </ul>     
         </nav>
         <div id="parallax" class="parallax">
@@ -2730,6 +2734,7 @@
     <script src="myScript.js"> </script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="Parallax.js"> </script>
+    <script src="nav.js"> </script>
 </body>
 
 
