--- a/brian.html
+++ b/brian.html
@@ -12,8 +12,8 @@
     <header>
         <nav class="nav">
                         <button type="button" id="hamburger">
-                            <span class="menuIcon">test1</span>
-                            <span class="closeIcon">close test 2</span>
+                            <img class="menuIcon" src="images/icons/menu.svg"></img>
+                            <img class="closeIcon" src="images/icons/x.svg"></img>
                         </button>
             <ul class="menu">
                 <a class="nav-item menuItem home" href="index.html"><li>Home</li></a>
