--- a/rosa.html
+++ b/rosa.html
@@ -10,6 +10,20 @@
 
 <body>
     <header>
+        <nav class="nav">
+            <button type="button" id="hamburger">
+                <img class="menuIcon" src="images/icons/menu.svg"></img>
+                <img class="closeIcon" src="images/icons/x.svg"></img>
+            </button>
+            <ul class="menu">
+                <a class="nav-item menuItem home" href="index.html"><li>Home</li></a>
+                <a class="nav-item menuItem ben" href="ben.html"><li>Ben</li></a>
+                <a class="nav-item menuItem brian" href="brian.html"><li>Brian</li></a>
+                <a class="nav-item menuItem kaylee" href="kaylee.html"><li>Kaylee</li></a>
+                <a class="nav-item menuItem manouk" href="manouk.html"><li>Manouk</li></a>
+                <a class="nav-item menuItem rosa" href="rosa.html"><li>Rosa</li></a>
+            </ul>     
+        </nav>
         <div id="parallax" class="parallax">
             <div class="scrollElement"></div>
         <div class="headerWrapper">
@@ -2577,7 +2591,7 @@
             <article>
                 <div class="hero">
                     <div class="inner-container">
-                        <h1 class="herotitle">Rosa swarte</h1>
+                        <h1 class="herotitle">Rosa Swarte</h1>
                     </div>
                 </div>
             </article>
@@ -2708,6 +2722,7 @@
         <script src="myScript.js"> </script>
         <script src="Parallax.js"> </script>
         <script src="rosaScript.js"></script>
+        <script src="nav.js"></script>
 </body>
 
 </html>
