--- a/rosa.html
+++ b/rosa.html
@@ -2597,9 +2597,9 @@
             </article>
 
             <div class="buttonContainer container">
-                <button id="1" class="showcaseButton" onclick="openShowcase('1')">1</button>
-                <button id="2" class="showcaseButton" onclick="openShowcase('2')">2</button>
-                <button id="3" class="showcaseButton" onclick="openShowcase('3')">3</button>
+                <button id="1" class="showcaseButton" onclick="openShowcase('1')">Branding + SVG Animeren</button>
+                <button id="2" class="showcaseButton" onclick="openShowcase('2')">3D Modeleren</button>
+                <button id="3" class="showcaseButton" onclick="openShowcase('3')">VR Omgeving</button>
             </div>
 
 
@@ -2608,32 +2608,38 @@
                 <article>
                     <section>
                         <div class="container">
-                            <div class="inner-container">
-                                <h2>Showcase 1</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <div class="row">
+  
+                                <figure>
+                                    <a href="https://www.behance.net/gallery/144824477/Media-Brewery-Branding" target="_blank">
+                                    <img class="img-styling" src="images/showcase-rosa/branding.png" alt="Media Brewery Branding">
+                                    </a>
+                                </figure>
+                                <div class="section-content">
+                                    <h2>Branding Media Brewery</h2>
+                                    <p>Om het eenmanszaak Media Brewery grafisch vorm te geven heb ik besloten hiervoor de branding te doen als leerdoel. 
+                                    Begonnen met vooronderzoek over wat alles opties zijn voor branding en hoe andere mensen dit aanpakken, kreeg ik als snel voorogen wat bij dit project aansluit.
+                                    Als eerst heb ik logo's ontworpen dat bij het bedrijfsnaam aansluit en de missie en kernwaardes opgesteld. Aan de hand hiervoor heb ik een font uitgekozen 
+                                    die bij deze waardes aansluiten en lang kwamen er meer elementen die aansluitte bij het geheel. Met meer itteraties is vervolgens het product tot stand gekomen.
+                                    Je kan alle schermen kijken door op de foto te drukken.
+
+                                    </p>
+                                </div>
                             </div>
-                        </div>
                     </section>
                     <section>
                         <div class="container">
                             <div class="row">
                                 <div class="section-content">
-                                    <h2>Een mooie titel</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <h2>SVG Animeren</h2>
+                                    <p>Zoals te vinden op deze pagina maar ook op die van andere zijn er animatie's en interacties in de afbeeldingen van onze kamers.
+                                        Alles behalve de scroll animatie heb ik hierin geanimeerd. Ik heb hiervoor gekozen omdat interactie hoort bij een belevening en SVG's 
+                                        bekend staan voor hun modulaire opbouw en snelle laadtijd. Zeer handig als ik later dingen wil animeren op een webpagina. 
+                                    </p>
                                 </div>
-                                <figure>
-                                    <img class="img-styling" src="images/example.jpg" alt="example">
-                                </figure>
+                                <div>
+                                    
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -2644,7 +2650,7 @@
                     <section>
                         <div class="container">
                             <div class="inner-container">
-                                <h2>Showcase 2</h2>
+                                <h2>3D Modeleren</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -2679,7 +2685,7 @@
                     <section>
                         <div class="container">
                             <div class="inner-container">
-                                <h2>Showcase 3</h2>
+                                <h2>VR Omgeving</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
