--- a/rosa.html
+++ b/rosa.html
@@ -2630,15 +2630,17 @@
                     <section>
                         <div class="container">
                             <div class="row">
-                                <div class="section-content">
+                                <div class="section-content" style="text-align:start">
                                     <h2>SVG Animeren</h2>
                                     <p>Zoals te vinden op deze pagina maar ook op die van andere zijn er animatie's en interacties in de afbeeldingen van onze kamers.
                                         Alles behalve de scroll animatie heb ik hierin geanimeerd. Ik heb hiervoor gekozen omdat interactie hoort bij een belevening en SVG's 
-                                        bekend staan voor hun modulaire opbouw en snelle laadtijd. Zeer handig als ik later dingen wil animeren op een webpagina. 
+                                        bekend staan voor hun modulaire opbouw en snelle laadtijd. Zeer handig als ik later dingen wil animeren op een webpagina.
+                                        Om dit tot stand te zetten heb ik meerdere objecten zelf moeten maken omdat ze nog simpel weg niet bestonden.  
+                                        <br>(Klik op het raam!)
                                     </p>
                                 </div>
-                                <div>
-                                    
+                                <div class="section-content">
+                                    <object data="images/showcase-rosa/SVG Voorbeeld-07.svg" width="400" height="500"> </object>
                                 </div>
                             </div>
                         </div>
