Laatste content voor Rosa pagina
We done! :thumbsup:

--- a/rosa.html
+++ b/rosa.html
@@ -2698,14 +2698,27 @@
                 <article>
                     <section>
                         <div class="container">
-                            <div class="inner-container">
-                                <h2>3D Modeleren</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <div class="row">
+                                <div class="section-content">
+                                    <h2>3D Modeleren</h2>
+                                    <p>Tijdens het maken van een VR Omgeving groeide ik nieuwschierig naar hoe modelen
+                                        gemaakt werden.
+                                        In mijn vrije tijd game ik regelmatig en in dit spel hing een soort van
+                                        droomvanger mobiel die super mooi is.
+                                        Ik wou deze super graag fysiek. Hiernaast heb ik aan het begin van de minor
+                                        besloten een 3D printer te kopen.
+                                        Deze 2 dingen kan ik dus tof combineren! De model staat ook online voor iedereen
+                                        om te gebruiken :) Je kan op de foto hiernaast drukken om het te zien.
+                                    </p>
+                                </div>
+                                <div class="section-content">
+                                    <a href="https://www.printables.com/model/176092-warframe-windchime" type="_blank">
+                                        <figure>
+                                            <img class="img-styling" src="images/showcase-rosa/mobile.png"
+                                                alt="example">
+                                        </figure>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -2713,17 +2726,19 @@
                         <div class="container">
                             <div class="row">
                                 <div class="section-content">
-                                    <h2>Een mooie titel</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <h2>Resultaat Model</h2>
+                                    <figure>
+                                        <img class="img-styling" src="images/showcase-rosa/warframe.png" alt="example">
+                                    </figure>
                                 </div>
-                                <figure>
-                                    <img class="img-styling" src="images/example.jpg" alt="example">
-                                </figure>
+                                <div class="section-content">
+                                    <h2>Resultaat Render</h2>
+                                    <iframe width="560" height="315"
+                                        src="https://www.youtube.com/embed/_aHqmDzGSbk?rel=0?version=3"
+                                        title="Blender Render Warframe" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -2735,12 +2750,14 @@
                         <div class="container">
                             <div class="inner-container">
                                 <h2 id="VR">VR Omgeving</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <p>Voor kerst heeft mijn partner besloten een VR Bril aan te schaffen. Verbaast over de
+                                    ervaring dat dit gaf had ik eigenlijk wel behoefte naar een specifiek iets
+                                    momenteel.
+                                    Namelijk een vakantie in huisje in een bos tijdens de minor. Nou heb je als student
+                                    niet alleen weinig geld maar ook nog verantwoordelijkheden dus fysiek dit doen wordt
+                                    het hem momenteel
+                                    helaas niet maar! VR Kan dit wel mogelijk maken!
+                                </p>
                             </div>
                         </div>
                     </section>
@@ -2748,19 +2765,20 @@
                         <div class="container">
                             <div class="row">
                                 <div class="section-content">
-                                    <h2>Een mooie titel</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <h2>Avontuur</h2>
+                                    <p>Na onderzoek te doen over de verschillende progamma's die VR ontwikkeling
+                                        ondertussen heb ik voornamelijk Unity en Unreal Engine 5 vergeleken.
+                                        Unreal Engine 5 was rond deze tijd nog in early acces mode maar zeer beginners
+                                        vriendelijk worden. Nou is Unity voor lange project waarschijnlijk fijner
+                                        en werkt goed met bepaalde behoefte en specifieke wensen maar voor de korte tijd
+                                        van dit leerdoel is beginnervriendelijk fijner dat grote assortiment aan opties.
+                                    </p>
                                 </div>
-                                <figure>
-                                    <img class="img-styling" src="images/example.jpg" alt="example">
-                                </figure>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/R2Pvswjz6hY"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                             </div>
-                        </div>
                     </section>
                 </article>
             </div>
