--- a/rosa.html
+++ b/rosa.html
@@ -2733,7 +2733,7 @@
                                 </div>
                                 <div class="section-content">
                                     <h2>Resultaat Render</h2>
-                                    <iframe width="560" height="315"
+                                    <iframe class="img-styling" width="560" height="315"
                                         src="https://www.youtube.com/embed/_aHqmDzGSbk?rel=0?version=3"
                                         title="Blender Render Warframe" frameborder="0"
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -2774,7 +2774,7 @@
                                         van dit leerdoel is beginnervriendelijk fijner dat grote assortiment aan opties.
                                     </p>
                                 </div>
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/R2Pvswjz6hY"
+                                <iframe class="img-styling" width="560" height="315" src="https://www.youtube.com/embed/R2Pvswjz6hY"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
